css: Avoid form group focus border clipping
Using z-index to place focused elements in a form group "above" the
siblings to avoid the focus border being clipped by the neighboring
elements.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -103,6 +103,12 @@ button.unstyled {
     margin-left: 0;
     border-left: none;
     border-radius: 0;
+    position: relative;
+    z-index: 2;
+  }
+
+  form .group :focus {
+    z-index: 3;
   }
 
   form .group :first-child {
